# chess-bot

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  engines.example.json  vcpkg.json
dataset/puzzles/: puzzles.csv  statistics.csv
docs/: engine.md
scripts/: build.sh  build_engine.sh  build_engine_version.sh  run.sh  test.sh
src/: CMakeLists.txt
src/chess/: CMakeLists.txt  board.cpp
src/chess/include/chess/: bitboard.h  board.h  color.h  constants.h  move.h  move_container.h  move_gen.h  moveset.h  piece.h  player.h  stack_repetition_tracker.h  uci.h
src/chess/include/chess/pieces/: base_piece.h  bishop.h  king.h  knight.h  pawn.h  queen.h  rook.h
src/chess/src/: bitboard.cpp  board.cpp  magic_bitboard.h  move.cpp  move_gen.cpp  moveset.cpp  piece.cpp  player.cpp  stack_repetition_tracker.cpp
src/chess/src/pieces/: bishop.cpp  king.cpp  knight.cpp  queen.cpp  rook.cpp
src/chess/tools/: magic_calculator.cpp
src/engine/: CMakeLists.txt
src/engine/include/chess_engine/: ab_engine.h  board_hash.h  config.h  engine.h  evaluation.h  history_heuristic.h  killer_moves.h  naive_engine.h  repetition_table.h  search.h  transposition_table.h  uci.h
src/engine/src/: ab_engine.cpp  board_hash.cpp  config.h  engine.cpp  engine.test.cpp  engine_impl.cpp  engine_impl.h  evaluation.cpp  evaluation.h  heuristics.h  history_heuristic.cpp  history_heuristic.h  killer_moves.cpp  killer_moves.h  move_priority.cpp  move_priority.h  naive_engine.cpp  repetition_table.cpp  search.cpp  search_impl.cpp  search_impl.h  time_management.cpp  time_management.h  transposition_table.cpp  transposition_table.h  uci.cpp
src/engine_cli/: CMakeLists.txt  README.md  engine_cli.cpp  engine_cli.h  engine_cli.test.cpp  main.cpp  uci_io.cpp  uci_io.h  uci_io.test.cpp  util.h  util.test.cpp
src/engine_cli/commands/: command.cpp  command.h  debug_command.cpp  debug_command.h  debug_command.test.cpp  go_command.cpp  go_command.h  go_command.test.cpp  new_game_command.cpp  new_game_command.h  new_game_command.test.cpp  parameterless_command.h  parsing.cpp  parsing.h  parsing.test.cpp  position_command.cpp  position_command.h  position_command.test.cpp  quit_command.cpp  quit_command.h  quit_command.test.cpp  ready_command.cpp  ready_command.h  ready_command.test.cpp  stop_command.cpp  stop_command.h  stop_command.test.cpp  uci_command.cpp  uci_command.h  uci_command.test.cpp
src/engine_cli/outputs/: best_move_output.cpp  best_move_output.h  error_output.cpp  error_output.h  id_output.cpp  id_output.h  output.cpp  output.h  ready_output.cpp  ready_output.h  uciok_output.cpp  uciok_output.h
src/engine_nn/: CMakeLists.txt
src/engine_nn/include/chess_engine_nn/: engine.h
src/engine_nn/src/: chess_game.cpp  chess_game.h  engine.cpp  main.cpp  mcts.h  mcts.tpp  model.cpp  model.h  trainer.cpp  trainer.h
src/lichess/: CMakeLists.txt  bot.cpp  bot.h  config.cpp  config.h  game_handler.cpp  game_handler.h  lichess.cpp  lichess.h  logger.cpp  logger.h  main.cpp  ndjson.cpp  ndjson.h
src/lichess/bot/: bot_state.cpp  bot_state.h  challenge_accepted_state.cpp  challenge_accepted_state.h  challenge_issued_state.cpp  challenge_issued_state.h  game_state.cpp  game_state.h  idle_state.cpp  idle_state.h
src/util/: CMakeLists.txt
src/util/include/util/: expected.h
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  board.cpp  engine.cpp  main.cpp  perft.cpp
test/chess/: CMakeLists.txt  bitboard_test.cpp  board.cpp  board_test.cpp  main.cpp  moveset_test.cpp  perft.cpp  uci.cpp
test/engine/: CMakeLists.txt  ab_engine_test.cpp  engine.cpp  engine_test.cpp  naive_engine_test.cpp
test/puzzles/: CMakeLists.txt  README.md
test/puzzles/src/: config.cpp  config.h  data.cpp  data.h  file.cpp  file.h  main.cpp  puzzle.cpp  puzzle.h  solve.cpp  solve.h  statistic.cpp  statistic.h
